# GreatAgentHackIGGY

./: .env.example  README.md  TEAM_ROLES_QUICK_REFERENCE.md  TEAM_TASK_BREAKDOWN.md  bear_reveal_results.json  main.py  pyproject.toml  quicktest.py  requirements.txt  sti_analysis_summary.json
Jailbreak/: asr_analysis.py  asr_datasets.py  asr_visualization.py  output_positives.py  prompts.py  refusal_detection.py  response_times.py  util.py  util_asr_analysis.py
Jailbreak/HB_benchmark/: assessment_main.csv  assessment_summary.csv  hb_results_diagnostics.csv  hb_results_main.csv  hle_results_diagnostics.csv  hle_results_main.csv
Jailbreak/asr_reports/: asr_results.json
Jailbreak/hle-results/: hle_results_diagnostics.csv  hle_results_harmful_main.csv  hle_results_jailbreak_diagnostics.csv  hle_results_main.csv
RedTeamingPrompts/: please_attack.jsonl  reveal_results_prompts.jsonl  sti_attack.jsonl
TrackC/: hle_benchmark_runner.py  hle_results_diagnostics.csv  hle_results_main.csv  prompt_database_testing.py  quicktest.py  track_c_test.py  util.py
TrackC/Jailbreak/: asr_analysis.py  asr_datasets.py  asr_visualization.py  calculate_asr.py  hle_benchmark_runner.py  import_jailbreakv_prompts.py  prompts.py  refusal_detection.py  util.py  util_asr_analysis.py
TrackC/RedTeamingPrompts/: DAN_attack.jsonl  back_to_the_past.json  bear_architecture.json  jailbreak_prompts.csv  please_attack.json  reveal_results_prompts.jsonl  role_play.json  role_play.jsonl  (+2 more)
agent-identification/: Agent-Identification-Analysis.md  agent-reveal.md  first-goal-readme.md  jailbreak.py
(+145 files in other folders)
