[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "greatagenthackiggy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.8.0",
    "pandas>=2.3.3",
    "requests>=2.31.0",
]

[tool.hatch.build.targets.wheel]
packages = ["TrackC"]
