[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "greatagenthackiggy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-generativeai>=0.8.5",
    "openai>=2.8.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "requests>=2.31.0",
]

[tool.hatch.build.targets.wheel]
packages = ["TrackC"]
